<?xml version="1.0" encoding="UTF-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
    android:id="@+id/connect"
    android:icon="@drawable/ic_menu_rotate"
    android:title="@string/connect" 
    android:showAsAction="ifRoom"
    />
    <item
    android:id="@+id/lookup"
    android:icon="@drawable/ic_menu_search"
    android:title="@string/whois" 
    android:showAsAction="never"
    />
    <item
    android:id="@+id/market"
    android:icon="@drawable/ic_menu_view"
    android:title="@string/market_monitor" 
    android:showAsAction="never"
    />
    <item
    android:id="@+id/aou"
    android:icon="@drawable/ic_menu_compass"
    android:title="@string/ao_universe" 
    android:showAsAction="never"
    />
    <item
    android:id="@+id/aorb"
    android:icon="@drawable/ic_menu_star"
    android:title="@string/recipebook" 
    android:showAsAction="never"
    />
    <item
    android:id="@+id/preferences"
    android:icon="@drawable/ic_menu_preferences"
    android:title="@string/preferences" 
    android:showAsAction="never"
    />
</menu>