<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="10sp"
>
	<TextView
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	android:text="@string/username"
	/>
	<EditText
	android:id="@+id/username"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:inputType="textNoSuggestions"
	/>
	<TextView
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:text="@string/password"
	/>
	<EditText
	android:id="@+id/password"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	android:inputType="textPassword"
	/>
	<RelativeLayout
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	>
	    <Button
		android:id="@+id/login"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/login"
		android:layout_alignParentLeft="true"
		/>
	    <TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentRight="true"
		android:layout_centerVertical="true"
		android:textSize="15sp"
		android:textStyle="bold"
		android:text="@string/register"
	    />
	</RelativeLayout>
</LinearLayout>
