<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:padding="10dip"
android:gravity="center"
>
	<EditText
	android:id="@+id/username"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:inputType="textNoSuggestions"
	android:singleLine="true"
	android:fadingEdge="horizontal"
	android:layout_marginBottom="10dip"
	android:textAppearance="?android:attr/textAppearanceMedium"
	android:hint="@string/username"
	/>
	<EditText
	android:id="@+id/password"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:inputType="textPassword"
	android:singleLine="true"
	android:fadingEdge="horizontal"
	android:layout_marginBottom="10dip"
	android:textAppearance="?android:attr/textAppearanceMedium"
	android:hint="@string/password"
	/>
	<CheckBox 
	android:id="@+id/savepassword"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content" 
	android:text="@string/save_account" 
	android:textAppearance="?android:attr/textAppearanceMedium"
	android:checked="true"
	/>
</LinearLayout>