<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
>
	<RelativeLayout
	android:id="@+id/gsp_player"
	android:layout_width="fill_parent"
	android:layout_height="45sp"
	android:layout_alignParentBottom="true"
	android:background="@drawable/footbg"
	android:visibility="visible"
	>
	    <ImageView
	    android:id="@+id/gsplogo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:src="@drawable/gsplogo"
		android:contentDescription="@string/gsp"
	    android:layout_alignParentLeft="true"
	    android:layout_centerVertical="true"
	    />
		<ImageButton
	    android:id="@+id/gspplay"
		android:layout_width="wrap_content"
	    android:layout_height="33sp"
	    android:src="@drawable/button_play"
	    android:adjustViewBounds="true"
	    android:background="@android:color/transparent"
	    android:layout_centerVertical="true"
	    android:layout_alignParentRight="true"
	    android:contentDescription="@string/play"
	    android:layout_marginRight="3sp"
		/>
		<TextView
	    android:id="@+id/gsptext"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
	    android:layout_centerVertical="true"
	    android:layout_toLeftOf="@id/gspplay"
	    android:layout_toRightOf="@id/gsplogo"
	    android:text="@string/gsp2"
	    android:gravity="center"
	    android:textSize="11sp"
	    android:lines="1"
	    android:maxLines="1"
	    android:ellipsize="marquee"
	    android:singleLine="true"
	    android:scrollHorizontally="true"
	    android:marqueeRepeatLimit="marquee_forever"
		/>
	</RelativeLayout>
	<RelativeLayout 
	android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:paddingRight="25sp"
	android:paddingLeft="25sp"
	android:layout_above="@id/gsp_player"
	android:layout_alignParentTop="true"
	android:gravity="center"
	>
		<GridView
		android:id="@+id/grid"
		android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="0sp"
	    android:numColumns="auto_fit"
	    android:scrollbars="none"
	    android:columnWidth="115sp"
	    android:layoutAnimation="@anim/grid_grow"
	    />
	</RelativeLayout>
</RelativeLayout>